@@ -1,3 +1,12 @@
+249
+
+- Fix setHeader in HTTP request builder to remove headers
+  comparing them case-insensitively.
+- Change HTTP request getHeader to compare header names
+  case-insensitively.
+- Change HTTP request getHeaders to return request headers
+  in lowercase.
+
 248
 
 - Update Jetty to 12.0.9
